feat : 修改文章標題

--- a/src/content/posts/20210724CSharp.md
+++ b/src/content/posts/20210724CSharp.md
@@ -1,8 +1,10 @@
 ---
-title: 一日一 LeetCode 計畫
-subtitle: C# - Add Two Numbers
+title: "一日一LeetCode 計畫"
+subtitle: "C# - Add Two Numbers"
 date: 2021-07-24
-tags: ["C#" , "LeetCode"]
+tags:
+  - "C#"
+  - "LeetCode"
 ---
 
 今天開始來實行一日一 LeetCode 計畫，除了讓自己更熟悉語言外，也想多練習更多的演算法
